--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "@rneui/themed": "^4.0.0-rc.8",
+    "axios": "^1.6.7",
+    "chart.js": "^4.4.1",
     "dayjs": "^1.11.10",
     "expo": "~50.0.4",
     "expo-blur": "^12.9.1",
@@ -31,8 +33,10 @@
     "galio-framework": "^0.8.0",
     "i18n-js": "^4.3.2",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-native": "^0.73.2",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
